Fixing menu cut off
If the context menu is low enough on the screen to get cut off, it will appear above the label rather than below label

--- a/public/javascripts/SVLabel/css/svl-context-menu.css
+++ b/public/javascripts/SVLabel/css/svl-context-menu.css
@@ -16,7 +16,7 @@
 
 #context-menu-vertical-connector {
     position: absolute;
-    top: -13px;
+    top: 0px;
     left: 178px;
     height: 13px;
     width: 6px;
